refactoring, changed the method of getting the user and provider, from the request to the header
